WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149447
invalidateSlotAssignments should trigger style recalc
https://bugs.webkit.org/show_bug.cgi?id=149447
Summary
invalidateSlotAssignments should trigger style recalc
Ryosuke Niwa
Reported
2015-09-21 21:57:03 PDT
When a shadow host's children is changed or its slot attribute is changed.
Attachments
Fixes the bug
(12.31 KB, patch)
2015-09-21 22:59 PDT
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2015-09-21 22:59:28 PDT
Created
attachment 261726
[details]
Fixes the bug
WebKit Commit Bot
Comment 2
2015-09-22 01:17:28 PDT
Comment on
attachment 261726
[details]
Fixes the bug Clearing flags on attachment: 261726 Committed
r190109
: <
http://trac.webkit.org/changeset/190109
>
WebKit Commit Bot
Comment 3
2015-09-22 01:17:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug