invalidateSlotAssignments should trigger style recalc https://bugs.webkit.org/show_bug.cgi?id=149447

Reviewed by Antti Koivisto.

Source/WebCore:

Invalidate the render tree of a shadow host when a new child is inserted, an existing child is removed,
or slot attribute of a child is modified.

No new tests. Covered by existing tests added in r190101.

* dom/Element.cpp:
(WebCore::Element::childrenChanged): Call invalidateSlotAssignments or invalidateDefaultSlotAssignments
depending on the types of children being inserted or removed since text nodes can only be assigned into
a default slot.
* dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::invalidateSlotAssignments):
(WebCore::ShadowRoot::invalidateDefaultSlotAssignments): Added.
* dom/ShadowRoot.h:
* dom/SlotAssignment.cpp:
(WebCore::SlotAssignment::invalidate): Reconstruct the render tree for the whole host. We can optimize
in the future by only invalidating active slot elements instead.
(WebCore::SlotAssignment::invalidateDefaultSlot): Added.
* dom/SlotAssignment.h:

LayoutTests:

Removed failing expectations from newly passing tests.

Also added test cases for inserting and removing text nodes, and modified the style recalc tests
to force layout between each DOM change to test case separately.

* fast/shadow-dom/shadow-layout-after-host-child-changes.html:
* fast/shadow-dom/shadow-layout-after-inserting-or-removing-host-child.html:
* fast/shadow-dom/shadow-layout-after-slot-changes.html:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/167540@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190109 268f45cc-cd09-0410-ab3c-d52691b4dbfc